# telescope

./: README.rst  pyproject.toml
src/telescope/: __init__.py  __main__.py  app.py  gui.py
