[tool.poetry]
name = "aws-telescope"
version = "0.1.0.dev0"
description = "A tool for examining remote S3 objects"
authors = ["Michael Dippery <michael@monkey-robot.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
