[tool.poetry]
name = "aws-telescope"
version = "0.1.0.dev0"
description = "A tool for examining remote S3 objects"
authors = ["Michael Dippery <michael@monkey-robot.com>"]
license = "GPL-3.0-or-later"
packages = [
  { include = "telescope", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.20.27"
textual = "^0.1.13"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
aws-telescope = "telescope.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
